<resources>
    <string name="appName">Управление ЖКХ</string>

    <string name="titleNews">Уведомления</string>
    <string name="titleDocuments">Документы</string>
    <string name="titleProfile">Профиль</string>
    <string name="titleProfileEdit">Редактирование профиля</string>
    <string name="titlePublicationCreate">Добавление публикации</string>
    <string name="titlePublicationEdit">Редактирование публикации</string>
    <string name="titlePublicationSpecific">Конкретная публикация</string>
    <string name="titleCreate">Создание</string>
    <string name="titleRename">Переименование</string>

    <string name="hintEmail">Эл. почта</string>
    <string name="hintPassword">Пароль</string>
    <string name="hintPasswordConfirm">Подтверждение пароля</string>
    <string name="hintTitle">Заголовок</string>
    <string name="hintContent">Содержание</string>
    <string name="hintGender">Пол</string>
    <string name="hintDocumentName">Наименование документа</string>
    <string name="hintDirectoryName">Наименование директории</string>

    <string name="buttonRegister">Зарегистрироваться</string>
    <string name="buttonLogin">Войти</string>
    <string name="buttonLogout">Выйти</string>
    <string name="buttonCreate">Добавить</string>
    <string name="buttonEdit">Редактировать</string>
    <string name="buttonCancel">Отмена</string>
    <string name="buttonRename">Rename</string>
    <string name="buttonDirectoryCreate">Создать директорию</string>
    <string name="buttonDocumentCreate">Создать документ</string>
    <string name="buttonPDFDocCreate">Создать PDF</string>
    <string name="buttonWordDocCreate">Создать Word документ</string>
    <string name="buttonExcelDocCreate">Создать Excel документ</string>


    <string name="descriptionProfileIcon">Иконка профиля</string>
    <string name="descriptionRegisterIcon">Иконка регистрации</string>
    <string name="descriptionPopupMenu">Меню</string>

    <string name="firstName">Имя</string>
    <string name="lastName">Фамилия</string>
    <string name="genderMale">Мужской</string>
    <string name="genderFemale">Женский</string>
    <string name="apartments">Номер квартиры</string>

    <string name="toastSuccessDocumentCreate">Документ создан</string>
    <string name="toastFailureDocumentCreate">Ошибка при создании документа</string>
    <string name="toastSuccessDocumentDelete">Документ удален</string>
    <string name="toastFailureDocumentDelete">Ошибка при удалении документа</string>
    <string name="toastSuccessItemRename">Элемент переименован</string>
    <string name="toastFailureItemRename">Ошибка при переименовании элемента</string>
    <string name="toastSuccessDirectoryCreate">Директория создана</string>
    <string name="toastFailureDirectoryCreate">Ошибка при создании директории</string>
    <string name="toastSuccessDirectoryDelete">Директория удалена</string>
    <string name="toastFailureDirectoryDelete">Ошибка при удалении директории</string>

    <string name="toastFailureAppFind">Не найдено приложения для открытия документа</string>
</resources>