<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.fragments.FragmentNewsPublicationEdit">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titlePublicationEdit"
        android:gravity="center"
        android:fontFamily="@font/inter_18regular"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/edit_title_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_text_input"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:padding="18dp"
        android:hint="@string/hintTitle"
        android:fontFamily="@font/inter_18regular"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"/>

    <EditText
        android:id="@+id/edit_content_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_text_input"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="15dp"
        android:padding="18dp"
        android:hint="@string/hintContent"
        android:fontFamily="@font/inter_18regular"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:inputType="textMultiLine"/>

    <Button
        android:id="@+id/button_edit_publication_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="15dp"
        android:padding="18dp"
        android:text="@string/buttonEdit"
        android:fontFamily="@font/inter_18regular"
        android:textSize="16sp"
        android:backgroundTint="@color/gray"
        android:textColor="@color/white"/>

</LinearLayout>