<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_auth"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".ui.activities.ActivityMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/ic_login_account"
            android:contentDescription="@string/descriptionProfileIcon"/>
        
        <EditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hintEmail"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/rounded_auth_input"
            android:padding="18dp"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/inter_18regular"/>

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hintPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/rounded_auth_input"
            android:padding="18dp"
            android:inputType="textPassword"
            android:fontFamily="@font/inter_18regular"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="18dp"
            android:text="@string/buttonLogin"
            android:backgroundTint="@color/white"
            android:textSize="20sp"
            android:textColor="#242424"
            android:fontFamily="@font/inter_18regular"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Отсутствует учётная запись?"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/toRegister_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/buttonRegister"
            android:backgroundTint="@color/white"
            android:textSize="20sp"
            android:textColor="#242424"/>
    </LinearLayout>
</RelativeLayout>