<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile_edit_fragment"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.FragmentProfileEdit">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_profile_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/titleProfileEdit"
            android:textSize="25sp"
            android:fontFamily="@font/inter_18regular"
            android:textColor="@color/black" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstName"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"/>

            <EditText
                android:id="@+id/profile_edit_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstName"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="20sp"
                android:background="@drawable/rounded_text_input"
                android:padding="18dp"
                android:inputType="textPersonName"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastName"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"/>

            <EditText
                android:id="@+id/profile_edit_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="20sp"
                android:background="@drawable/rounded_text_input"
                android:padding="18dp"
                android:inputType="textPersonName"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="15dp">
            <RadioGroup
                android:id="@+id/profile_edit_gender_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genderMale"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/inter_18regular"
                    android:textSize="20sp"
                    android:textColor="@color/gray" />

                <RadioButton
                    android:id="@+id/gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genderFemale"
                    android:fontFamily="@font/inter_18regular"
                    android:textSize="20sp"
                    android:textColor="@color/gray"/>
            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hintEmail"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"/>

            <EditText
                android:id="@+id/profile_edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintEmail"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="20sp"
                android:background="@drawable/rounded_text_input"
                android:padding="18dp"
                android:inputType="textEmailAddress"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hintPassword"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"/>

            <EditText
                android:id="@+id/profile_edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="20sp"
                android:background="@drawable/rounded_text_input"
                android:padding="18dp"
                android:inputType="textPassword"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hintPasswordConfirm"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"/>

            <EditText
                android:id="@+id/profile_edit_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintPasswordConfirm"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="20sp"
                android:background="@drawable/rounded_text_input"
                android:padding="18dp"
                android:inputType="textPassword"/>
        </LinearLayout>


        <Button
            android:id="@+id/button_profile_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/buttonEdit"
            android:backgroundTint="@color/gray"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="15dp"/>
    </LinearLayout>
</LinearLayout>